@@ -36,7 +36,8 @@ import org.elasticsearch.tracing.Tracer;
 import org.elasticsearch.watcher.ResourceWatcherService;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xpack.relevancesearch.query.RelevanceMatchQueryBuilder;
-import org.elasticsearch.xpack.relevancesearch.relevance.RelevanceSettingsService;
+import org.elasticsearch.xpack.relevancesearch.relevance.curations.CurationsService;
+import org.elasticsearch.xpack.relevancesearch.relevance.settings.RelevanceSettingsService;
 
 import java.util.Collection;
 import java.util.Collections;
@@ -52,6 +53,7 @@ public class RelevanceSearchPlugin extends Plugin implements ActionPlugin, Searc
     }
 
     private final SetOnce<RelevanceSettingsService> relevanceSettingsService = new SetOnce<>();
+    private final SetOnce<CurationsService> curationsService = new SetOnce<>();
 
     @Override
     public List<RestHandler> getRestHandlers(
@@ -79,8 +81,8 @@ public class RelevanceSearchPlugin extends Plugin implements ActionPlugin, Searc
         return Collections.singletonList(
             new QuerySpec<QueryBuilder>(
                 RelevanceMatchQueryBuilder.NAME,
-                (in) -> new RelevanceMatchQueryBuilder(relevanceSettingsService.get(), in),
-                (parser) -> RelevanceMatchQueryBuilder.fromXContent(parser, relevanceSettingsService.get())
+                (in) -> new RelevanceMatchQueryBuilder(relevanceSettingsService.get(), curationsService.get(), in),
+                (parser) -> RelevanceMatchQueryBuilder.fromXContent(parser, relevanceSettingsService.get(), curationsService.get())
             )
         );
     }
@@ -102,7 +104,8 @@ public class RelevanceSearchPlugin extends Plugin implements ActionPlugin, Searc
         AllocationDeciders allocationDeciders
     ) {
         relevanceSettingsService.set(new RelevanceSettingsService(client));
+        curationsService.set(new CurationsService(client));
 
-        return Collections.singletonList(relevanceSettingsService.get());
+        return List.of(relevanceSettingsService.get(), curationsService.get());
     }
 }
